renamed scheduler, migrate to gogs

--- a/public/scheduler.html
+++ b/public/scheduler.html
@@ -28,7 +28,7 @@
           <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
                     <li><a href="#!">Control</a></li>
-                    <li class="active"><a href="#!">Scheudle</a></li>
+                    <li class="active"><a href="#!">schedule</a></li>
               </ul>
             </div>
         </div>
@@ -85,7 +85,7 @@ var modcolor = function (col, amt) {
 
    var demodata={
 
-    "scheudles": [
+    "schedules": [
       {
         "id": "a",
         "name":"l1 on",
