started color picker

--- a/public/scheduler.html
+++ b/public/scheduler.html
@@ -39,7 +39,16 @@
 
     <div id="visualization"></div>
     
+    <div id="popover-color" class="popover popover-default popover-color">
+        <div class="arrow"></div>
+        <h3 class="popover-title">
+          <span class="close" data-dismiss="popover-x">&times;</span>
+          <b>Select color  </b>
+        </h3>
+        <div class="popover-content">
 
+        </div>
+    </div>
 
     <div id="popover-edit" class="popover popover-default popover-edit">
         <div class="arrow"></div>
