some gui-bugfixes

--- a/public/scheduler.html
+++ b/public/scheduler.html
@@ -46,7 +46,9 @@
           <b>Select color  </b>
         </h3>
         <div class="popover-content">
-
+          <div class="color-sel">
+            lalaala
+          </div>
         </div>
     </div>
 
