last for today, moved modcolor to utils.js

--- a/public/scheduler.html
+++ b/public/scheduler.html
@@ -15,6 +15,7 @@
   </head>
 
   <body>
+
     <!--main navigation !-->
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -130,18 +131,17 @@
       </div>
     </div>
 
-
-
+    <!-- TODO: move to requirejs !-->
     <script src="/lib/jquery/jquery.min.js"></script>
     <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="/lib/bootstrap-popover-x/bootstrap-popover-x.js"></script>
     <script src="/lib/bootstrap-3-timepicker/js/bootstrap-timepicker.js"></script>
     <script src="/lib/visjs/vis.js"></script>
     <script src="/lib/moment.min.js"></script>
+    <script src="/js/utils.js"></script>
     <script src="/js/client.js"></script>
 
-
-
+    
     <script>
       var demodata={
         "timers": [
@@ -243,6 +243,8 @@
         ],
       };
     </script>
+
+
   </body>
 </html>
 
