moved client.js to timer.js

--- a/public/scheduler.html
+++ b/public/scheduler.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -139,9 +140,9 @@
     <script src="/lib/visjs/vis.js"></script>
     <script src="/lib/moment.min.js"></script>
     <script src="/js/utils.js"></script>
-    <script src="/js/client.js"></script>
+    <script src="/js/timer.js"></script>
 
-    
+
     <script>
       var demodata={
         "timers": [
