--- a/public/scheduler.html
+++ b/public/scheduler.html
@@ -53,7 +53,8 @@
       </h3>
       <div class="popover-content">
         <div class="color-sel">
-          lalaala
+          <ul class="color-sel">
+          </ul>
         </div>
       </div>
     </div>
@@ -139,6 +140,8 @@
     <script src="/lib/bootstrap-3-timepicker/js/bootstrap-timepicker.js"></script>
     <script src="/lib/visjs/vis.js"></script>
     <script src="/lib/moment.min.js"></script>
+    <script src="/lib/jquery.slimscroll.min.js"></script>
+    
     <script src="/js/utils.js"></script>
     <script src="/js/timer.js"></script>
 
@@ -222,24 +225,24 @@
         "devices": [
           {
            "id": "d-a",
-           "name": "lamp 1",
+           "name": "Lamp 1",
            "port": 1,
            "icon": "cog",
-           "color": "#ffeb3b"
+           "color": "#F6DA01"
            },
            {
             "id": "d-b",
-            "name": "lamp 2",
+            "name": "Lamp 2",
             "port": 2,
             "icon": "cog",
-            "color": "#ffc107"
+            "color": "#FDC402"
           },
           {
             "id": "d-c",
             "port": 3,
-            "name": "water",
+            "name": "Water",
             "icon": "tint",
-            "color": "#2196f3"
+            "color": "#0D80DF"
           }
         ],
       };
