--- a/public/scheduler.html
+++ b/public/scheduler.html
@@ -237,28 +237,28 @@
            "name": "Lamp 1",
            "port": 1,
            "icon": "cog",
-           "color": "#F6DA01"
+           "color": "#fffa00"
            },
            {
             "id": "d-b",
             "name": "Lamp 2",
             "port": 2,
             "icon": "cog",
-            "color": "#FDC402"
+            "color": "#ffde00"
           },
           {
             "id": "d-c",
             "port": 3,
             "name": "Water",
             "icon": "tint",
-            "color": "#0D80DF"
+            "color": "#0073ff"
           },
           {
             "id": "d-d",
             "port": 4,
             "name": "Spray",
             "icon": "leaf",
-            "color": "#30B8B1"
+            "color": "#00ff9d"
           }
         ],
       };
